Changes on server console. Fixed maven jar generation.